Implement application and notificationSend
