# recruitment-automation-system-ui/src/app/services/models/application-request.ts
@@ -1,14 +1,12 @@
 /* tslint:disable */
 /* eslint-disable */
-import { JobListing } from '../models/job-listing';
 export interface ApplicationRequest {
   applicationDate?: string;
-  candidateEmail?: string;
-  candidateName?: string;
+  candidateEmail: string;
+  candidateName: string;
   coverLetter?: string;
   id?: number;
-  jobListing?: JobListing;
-  jobListingId?: JobListing;
-  resumeUrl?: string;
+  jobId: number;
+  resumeUrl: string;
   status?: string;
 }
