# recruitment-automation-system-ui/src/app/services/models/job-listing.ts
@@ -1,12 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface JobListing {
-  closingDate?: string;
-  department?: string;
-  description?: string;
-  id?: number;
-  location?: string;
-  postedDate?: string;
-  requirements?: string;
-  title?: string;
-}
